[project]
name = "14mv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.3",
    "pygetwindow>=0.0.9",
    "pyqt5-tools>=5.15.9.3.3",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
